@@ -3,70 +3,87 @@ import java.util.stream.*;
 
 // https://medium.com/@asishpanda444/stream-api-coding-qna-8df8682b7e2a
 public class StreamExamples {
-
     public static void main(String[] args) {
-
         filterEvenNumbers();
-        findMax();
-        sortDescending();
-        countPrefix();
-        firstNonRepeatedChar();
-        convertUpperCase();
-        sumNumbers();
-        checkContainsAPI();
-        findDuplicates();
-        groupByLength();
-        flattenList();
-        concatenateStrings();
-        longestString();
-        charFrequency();
-        parallelSum();
-        joinStrings();
-        removeNulls();
-        averageNumbers();
-        listToMap();
-        partitionEvenOdd();
-        thirdLargest();
-        findPalindromes();
-        reverseStrings();
-        mapFilterKeys();
-        removeDuplicates();
-        mostFrequentChar();
-        commonElements();
-        sumOfSquares();
-        partitionPalindrome();
-        skipLimit();
-        longestWordSentence();
-        cartesianProduct();
-        topStudents();
-        groupByFirstChar();
-        reverseConcat();
-        median();
-        groupEmployee();
-        maxSalaryDept();
-        productNumbers();
-        slidingWindow();
-        detectAnagrams();
-        runningSum();
-        fibonacci();
-        sortedGroupedWords();
+        // findMax();
+        // sortDescending();
+        // countPrefix();
+        // firstNonRepeatedChar();
+        // convertUpperCase();
+        // sumNumbers();
+        // checkContainsAPI();
+        // findDuplicates();
+        // groupByLength();
+        // flattenList();
+        // concatenateStrings();
+        // longestString();
+        // charFrequency();
+        // parallelSum();
+        // joinStrings();
+        // removeNulls();
+        // averageNumbers();
+        // listToMap();
+        // partitionEvenOdd();
+        // thirdLargest();
+        // findPalindromes();
+        // reverseStrings();
+        // mapFilterKeys();
+        // removeDuplicates();
+        // mostFrequentChar();
+        // commonElements();
+        // sumOfSquares();
+        // partitionPalindrome();
+        // skipLimit();
+        // longestWordSentence();
+        // cartesianProduct();
+        // topStudents();
+        // groupByFirstChar();
+        // reverseConcat();
+        // median();
+        // groupEmployee();
+        // detectCycle();
+        // wordWithMaxVowels();
+        // runningSum();
+        // fibonacci();
+        // highestSalaryByDept();
+        // groupWordsByLength();
+        // productOfNumbers();
+        // slidingWindow();
+        // detectAnagrams();
+        // pyramidPattern();
+        // maxPathTriangle();
+        // nonRepeatingCharacters();
+        // allSubsequences();
+        // charFrequency();
+        // flattenList();
+        // duplicateElements();
+        // mapToKeyValuePairs();
+        // checkSorted();
+        // subarrays();
+        // combineListsToMap();
+        // pairWithGivenSum();
+        // randomNumbers();
+        // longestIncreasingSubsequence();
+        // sortByFrequency();
+        // sentenceCase();
+
     }
 
-    //1
+    //1 Filter Even Numbers from a List
     static void filterEvenNumbers() {
         List<Integer> numbers = Arrays.asList(1,2,3,4,5,6);
         List<Integer> even = numbers.stream().filter(n->n%2==0).toList();
         System.out.println(even);
     }
 
-    //2
+    //2 Find Maximum in a List
     static void findMax() {
         List<Integer> numbers = Arrays.asList(10,20,30,40,50);
         int max = numbers.stream().max(Integer::compare).orElseThrow();
         System.out.println(max);
     }
 
-    //3
+    //3 Sort a List
     static void sortDescending() {
         List<Integer> numbers = Arrays.asList(3,5,1,4,2);
         List<Integer> sorted = numbers.stream()
@@ -75,14 +92,14 @@ public class StreamExamples {
         System.out.println(sorted);
     }
 
-    //4
+    //4 Count Strings with Specific Prefix
     static void countPrefix() {
         List<String> names = Arrays.asList("Alice","Bob","Annie","Alex","Charlie");
         long count = names.stream().filter(n->n.startsWith("A")).count();
         System.out.println(count);
     }
 
-    //5
+    //5 Find First Non-Repeated Character in a String
     static void firstNonRepeatedChar() {
         String input="swiss";
         Character ch = input.chars()
@@ -92,27 +109,27 @@ public class StreamExamples {
         System.out.println(ch);
     }
 
-    //6
+    //6 Convert List of Strings to Uppercase
     static void convertUpperCase() {
         List<String> names = Arrays.asList("java","stream","api");
         System.out.println(names.stream().map(String::toUpperCase).toList());
     }
 
-    //7
+    //7 Sum of Numbers in a List
     static void sumNumbers() {
         List<Integer> numbers = Arrays.asList(1,2,3,4,5);
         int sum = numbers.stream().mapToInt(Integer::intValue).sum();
         System.out.println(sum);
     }
 
-    //8
+    //8 Check if Any String Matches a Condition
     static void checkContainsAPI() {
         List<String> list = Arrays.asList("Java","Stream API","Lambda");
         boolean result = list.stream().anyMatch(s->s.contains("API"));
         System.out.println(result);
     }
 
-    //9
+    //9 Find Duplicate Elements in a List
     static void findDuplicates() {
         List<Integer> numbers = Arrays.asList(1,2,3,4,2,5,1);
         Set<Integer> unique = new HashSet<>();
@@ -122,7 +139,7 @@ public class StreamExamples {
         System.out.println(dup);
     }
 
-    //10
+    //10 Group Strings by Length
     static void groupByLength() {
         List<String> words = Arrays.asList("Java","Stream","API","Code","Fun");
         Map<Integer,List<String>> map =
@@ -130,7 +147,7 @@ public class StreamExamples {
         System.out.println(map);
     }
 
-    //11
+    //11 Flatten a List of Lists
     static void flattenList() {
         List<List<Integer>> lists = Arrays.asList(
                 Arrays.asList(1,2,3),
@@ -143,14 +160,14 @@ public class StreamExamples {
         System.out.println(result);
     }
 
-    //12
+    //12 Concatenate Strings
     static void concatenateStrings() {
         List<String> words = Arrays.asList("Stream","API","is","powerful");
         String s = words.stream().reduce("",(a,b)->a+" "+b).trim();
         System.out.println(s);
     }
 
-    //13
+    //13 Find the Longest String
     static void longestString() {
         List<String> words = Arrays.asList("Java","Stream","API","Development");
         String longest = words.stream()
@@ -159,7 +176,7 @@ public class StreamExamples {
         System.out.println(longest);
     }
 
-    //14
+    //14 Count Frequency of Characters in a String
     static void charFrequency() {
         String input="success";
         Map<Character,Long> freq = input.chars()
@@ -168,34 +185,34 @@ public class StreamExamples {
         System.out.println(freq);
     }
 
-    //15
+    //15 Parallel Stream to Compute Sum
     static void parallelSum() {
         List<Integer> numbers = Arrays.asList(1,2,3,4,5);
         int sum = numbers.parallelStream().mapToInt(Integer::intValue).sum();
         System.out.println(sum);
     }
 
-    //16
+    //16 Create Custom Collector
     static void joinStrings() {
         List<String> words = Arrays.asList("Java","Stream","API");
         String joined = words.stream().collect(Collectors.joining(", "));
         System.out.println(joined);
     }
 
-    //17
+    //17 Remove Null Values
     static void removeNulls() {
         List<String> words = Arrays.asList("Java",null,"Stream",null,"API");
         System.out.println(words.stream().filter(Objects::nonNull).toList());
     }
 
-    //18
+    //18 Calculate Average of Numbers
     static void averageNumbers() {
         List<Integer> numbers = Arrays.asList(10,20,30,40,50);
         double avg = numbers.stream().mapToInt(Integer::intValue).average().orElse(0);
         System.out.println(avg);
     }
 
-    //19
+    //19 Collect Map from List
     static void listToMap() {
         List<String> words = Arrays.asList("Java","Stream","API");
         Map<String,Integer> map = words.stream()
@@ -203,7 +220,7 @@ public class StreamExamples {
         System.out.println(map);
     }
 
-    //20
+    //20 Partition Numbers into Even and Odd
     static void partitionEvenOdd() {
         List<Integer> numbers = Arrays.asList(1,2,3,4,5,6);
         Map<Boolean,List<Integer>> map =
@@ -211,7 +228,7 @@ public class StreamExamples {
         System.out.println(map);
     }
 
-    //21
+    //21 Find Nth Largest Element in a List
     static void thirdLargest() {
         List<Integer> numbers = Arrays.asList(10,20,50,40,30);
         int val = numbers.stream().sorted(Comparator.reverseOrder())
@@ -219,7 +236,7 @@ public class StreamExamples {
         System.out.println(val);
     }
 
-    //22
+    //22 Find All Palindromic Strings
     static void findPalindromes() {
         List<String> words = Arrays.asList("radar","level","world","java");
         List<String> result = words.stream()
@@ -228,7 +245,7 @@ public class StreamExamples {
         System.out.println(result);
     }
 
-    //23
+    //23 Reverse Each String in a List
     static void reverseStrings() {
         List<String> words = Arrays.asList("Java","Stream","API");
         System.out.println(words.stream()
@@ -236,7 +253,7 @@ public class StreamExamples {
                 .toList());
     }
 
-    //24
+    //24 Filter and Convert Map to List
     static void mapFilterKeys() {
         Map<String,Integer> map = Map.of("A",5,"B",15,"C",10,"D",20);
         List<String> keys = map.entrySet().stream()
@@ -246,13 +263,13 @@ public class StreamExamples {
         System.out.println(keys);
     }
 
-    //25
+    //25 Remove Duplicates Without Collectors
     static void removeDuplicates() {
         List<Integer> numbers = Arrays.asList(1,2,3,2,4,3,5);
         System.out.println(numbers.stream().distinct().toList());
     }
 
-    //26
+    //26 Find the Most Frequent Character in a String
     static void mostFrequentChar() {
         String input="success";
         char c = input.chars().mapToObj(ch->(char)ch)
@@ -263,14 +280,14 @@ public class StreamExamples {
         System.out.println(c);
     }
 
-    //27
+    //27 Find Common Elements Between Two Lists
     static void commonElements() {
         List<Integer> a = Arrays.asList(1,2,3,4,5);
         List<Integer> b = Arrays.asList(3,4,5,6);
         System.out.println(a.stream().filter(b::contains).toList());
     }
 
-    //28
+    //28 Find the Sum of Squares of Even Numbers
     static void sumOfSquares() {
         List<Integer> numbers = Arrays.asList(1,2,3,4,5,6);
         int sum = numbers.stream()
@@ -279,7 +296,7 @@ public class StreamExamples {
         System.out.println(sum);
     }
 
-    //29
+    //29 Partition Strings by Palindrome
     static void partitionPalindrome() {
         List<String> words = Arrays.asList("radar","level","java","stream");
         Map<Boolean,List<String>> map =
@@ -289,13 +306,13 @@ public class StreamExamples {
         System.out.println(map);
     }
 
-    //30
+    //30 Skip and Limit Elements
     static void skipLimit() {
         List<Integer> numbers = Arrays.asList(1,2,3,4,5,6,7);
         System.out.println(numbers.stream().skip(3).limit(2).toList());
     }
 
-    //31
+    //31 Find the Longest Word from a Sentence
     static void longestWordSentence() {
         String sentence="Java Stream API is very powerful";
         String longest = Arrays.stream(sentence.split(" "))
@@ -303,7 +320,7 @@ public class StreamExamples {
         System.out.println(longest);
     }
 
-    //32
+    //32 Compute Cartesian Product of Two Lists
     static void cartesianProduct() {
         List<Integer> a=Arrays.asList(1,2,3);
         List<Integer> b=Arrays.asList(4,5);
@@ -313,7 +330,7 @@ public class StreamExamples {
         System.out.println(res);
     }
 
-    //33
+    //33 Find Top N Highest Scoring Students
     static void topStudents() {
         List<Student> list = Arrays.asList(
                 new Student("Alice",85),
@@ -330,7 +347,7 @@ public class StreamExamples {
         System.out.println(top);
     }
 
-    //34
+    //34 Group by First Character
     static void groupByFirstChar() {
         List<String> words = Arrays.asList("apple","banana","avocado");
         Map<Character,List<String>> map =
@@ -338,14 +355,14 @@ public class StreamExamples {
         System.out.println(map);
     }
 
-    //35
+    //35 Custom Reduce to Concatenate Strings
     static void reverseConcat() {
         List<String> words = Arrays.asList("Stream","API","is","awesome");
         String s = words.stream().reduce((a,b)->b+" "+a).orElse("");
         System.out.println(s);
     }
 
-    //36
+    //36 Find Median of a List
     static void median() {
         List<Integer> numbers = Arrays.asList(3,1,4,2,5);
         List<Integer> sorted = numbers.stream().sorted().toList();
@@ -353,7 +370,7 @@ public class StreamExamples {
         System.out.println(median);
     }
 
-    //37
+    //37 Collect Nested Map by Grouping
     static void groupEmployee() {
         List<Employee> list = Arrays.asList(
                 new Employee("Alice","HR",25),
@@ -366,85 +383,371 @@ public class StreamExamples {
         System.out.println(map);
     }
 
-    //38
-    static void maxSalaryDept() {
-        List<EmployeeSalary> list = Arrays.asList(
-                new EmployeeSalary("Alice","HR",50000),
-                new EmployeeSalary("Bob","IT",80000),
-                new EmployeeSalary("Charlie","IT",75000)
+    // 38 Detect Cycles in a Graph-Like Structure
+    static void detectCycle() {
+        class Node {
+            int id, parentId;
+            Node(int id, int parentId) {
+                this.id = id;
+                this.parentId = parentId;
+            }
+        }
+
+        List<Node> nodes = Arrays.asList(
+                new Node(1,0), new Node(2,1), new Node(3,2),
+                new Node(4,3), new Node(5,4), new Node(2,5)
         );
 
-        Map<String,Optional<EmployeeSalary>> map =
-                list.stream().collect(Collectors.groupingBy(
-                        EmployeeSalary::getDepartment,
-                        Collectors.maxBy(Comparator.comparingDouble(EmployeeSalary::getSalary))
-                ));
-        System.out.println(map);
+        boolean hasCycle = nodes.stream()
+                .anyMatch(node -> nodes.stream()
+                        .filter(n -> n.id == node.parentId)
+                        .anyMatch(n -> n.id == node.id));
+
+        System.out.println("Cycle detected: " + hasCycle);
     }
 
-    //39
-    static void productNumbers() {
-        List<Integer> numbers = Arrays.asList(1,2,3,4,5);
-        int product = numbers.stream().reduce(1,(a,b)->a*b);
-        System.out.println(product);
+    // 39 Find the Word with Maximum Vowels
+    static void wordWithMaxVowels() {
+        List<String> words = Arrays.asList("stream","java","programming","awesome");
+
+        String result = words.stream()
+                .max(Comparator.comparingInt(
+                        w -> (int) w.chars().filter(c -> "aeiou".indexOf(c)!=-1).count()
+                )).orElse("");
+
+        System.out.println("Word with most vowels: " + result);
     }
 
-    //40
-    static void slidingWindow() {
-        List<Integer> numbers = Arrays.asList(1,2,3,4,5,6);
-        List<List<Integer>> windows =
-                IntStream.range(0,numbers.size()-2)
-                        .mapToObj(i->numbers.subList(i,i+3))
-                        .toList();
-        System.out.println(windows);
-    }
-
-    //41
-    static void detectAnagrams() {
-        List<String> words = Arrays.asList("listen","silent","enlist","google");
-        Map<String,List<String>> map =
-                words.stream().collect(Collectors.groupingBy(
-                        w->w.chars().sorted()
-                                .mapToObj(c->String.valueOf((char)c))
-                                .collect(Collectors.joining())
-                ));
-        System.out.println(map);
-    }
-
-    //42
+    // 40 Compute Running Sum
     static void runningSum() {
         List<Integer> numbers = Arrays.asList(1,2,3,4,5);
-        List<Integer> sum =
-                IntStream.range(0,numbers.size())
-                        .mapToObj(i->numbers.subList(0,i+1)
-                                .stream().mapToInt(Integer::intValue).sum())
-                        .toList();
-        System.out.println(sum);
+
+        List<Integer> sum = IntStream.range(0, numbers.size())
+                .mapToObj(i -> numbers.subList(0,i+1).stream()
+                        .mapToInt(Integer::intValue).sum())
+                .collect(Collectors.toList());
+
+        System.out.println("Running sum: " + sum);
     }
 
-    //43
+    // 41 Generate Fibonacci Sequence Using Streams
     static void fibonacci() {
-        List<Integer> fib =
-                Stream.iterate(new int[]{0,1},a->new int[]{a[1],a[0]+a[1]})
-                        .limit(10)
-                        .map(a->a[0])
-                        .toList();
-        System.out.println(fib);
+        int n = 10;
+
+        List<Integer> fib = Stream.iterate(new int[]{0,1},
+                        arr -> new int[]{arr[1], arr[0]+arr[1]})
+                .limit(n)
+                .map(arr -> arr[0])
+                .collect(Collectors.toList());
+
+        System.out.println("Fibonacci: " + fib);
     }
 
-    //44
-    static void sortedGroupedWords() {
-        List<String> words = Arrays.asList("java","stream","api","code");
+    // 42 Find Employees with Highest Salary in Each Department
+    static void highestSalaryByDept() {
+
+        class Employee {
+            String name, dept;
+            double salary;
+
+            Employee(String name,String dept,double salary){
+                this.name=name;
+                this.dept=dept;
+                this.salary=salary;
+            }
+
+            public String toString(){
+                return name;
+            }
+        }
+
+        List<Employee> employees = Arrays.asList(
+                new Employee("Alice","HR",50000),
+                new Employee("Bob","IT",80000),
+                new Employee("Charlie","IT",75000),
+                new Employee("Dave","HR",60000),
+                new Employee("Eve","Finance",70000)
+        );
+
+        Map<String,Employee> result =
+                employees.stream().collect(Collectors.groupingBy(
+                        e -> e.dept,
+                        Collectors.collectingAndThen(
+                                Collectors.maxBy(Comparator.comparingDouble(e -> e.salary)),
+                                Optional::get
+                        )
+                ));
+
+        System.out.println("Highest salary by dept: " + result);
+    }
+
+    // 43 Group Words by Length and Sort Them
+    static void groupWordsByLength() {
+        List<String> words = Arrays.asList("java","stream","api","example","code","test");
+
         Map<Integer,List<String>> map =
                 words.stream().collect(Collectors.groupingBy(
                         String::length,
                         Collectors.collectingAndThen(
                                 Collectors.toList(),
-                                l->l.stream().sorted().toList()
+                                list -> list.stream().sorted().collect(Collectors.toList())
                         )
                 ));
-        System.out.println(map);
+
+        System.out.println("Grouped words: " + map);
     }
+
+    // 44 Calculate the Product of All Numbers
+    static void productOfNumbers() {
+        List<Integer> numbers = Arrays.asList(1,2,3,4,5);
+
+        int product = numbers.stream().reduce(1,(a,b)->a*b);
+
+        System.out.println("Product: " + product);
+    }
+
+    // 45 Sliding Window of N Elements
+    static void slidingWindow() {
+        List<Integer> numbers = Arrays.asList(1,2,3,4,5,6);
+
+        List<List<Integer>> windows =
+                IntStream.range(0,numbers.size()-2)
+                        .mapToObj(i -> numbers.subList(i,i+3))
+                        .collect(Collectors.toList());
+
+        System.out.println("Sliding windows: " + windows);
+    }
+
+    // 46 Detect Anagrams in a List
+    static void detectAnagrams() {
+        List<String> words = Arrays.asList("listen","silent","enlist","google","elbow","below");
+
+        Map<String,List<String>> map =
+                words.stream().collect(Collectors.groupingBy(
+                        word -> word.chars().sorted()
+                                .mapToObj(c -> String.valueOf((char)c))
+                                .collect(Collectors.joining())
+                ));
+
+        System.out.println("Anagrams: " + map);
+    }
+
+    // 47 Generate a Pyramid Pattern
+    static void pyramidPattern() {
+        int levels = 5;
+
+        List<String> pyramid =
+                IntStream.rangeClosed(1,levels)
+                        .mapToObj(i -> " ".repeat(levels-i) +
+                                IntStream.rangeClosed(1,i)
+                                        .mapToObj(String::valueOf)
+                                        .collect(Collectors.joining(" "))
+                        ).collect(Collectors.toList());
+
+        pyramid.forEach(System.out::println);
+    }
+
+    // 48 Find Maximum Path Sum in a Triangle
+    static void maxPathTriangle() {
+
+        List<List<Integer>> triangle = Arrays.asList(
+                Arrays.asList(3),
+                Arrays.asList(7,4),
+                Arrays.asList(2,4,6),
+                Arrays.asList(8,5,9,3)
+        );
+
+        int max =
+                IntStream.range(0,triangle.size())
+                        .mapToObj(i -> triangle.get(triangle.size()-1-i))
+                        .reduce((rowBelow,currentRow) ->
+                                IntStream.range(0,currentRow.size())
+                                        .mapToObj(j -> currentRow.get(j)
+                                                + Math.max(rowBelow.get(j),rowBelow.get(j+1)))
+                                        .collect(Collectors.toList())
+                        ).orElse(Collections.emptyList()).get(0);
+
+        System.out.println("Max path sum: " + max);
+    }
+
+    // 49 Find Non-Repeating Characters in a String
+    static void nonRepeatingCharacters() {
+        String input="swiss";
+
+        List<Character> list =
+                input.chars().mapToObj(c -> (char)c)
+                        .filter(c -> input.chars().filter(ch->ch==c).count()==1)
+                        .collect(Collectors.toList());
+
+        System.out.println("Non repeating: " + list);
+    }
+
+    // 50 Find All Subsequences of a String
+    static void allSubsequences() {
+        String str="abc";
+
+        List<String> subs =
+                IntStream.range(0,1<<str.length())
+                        .mapToObj(i ->
+                                IntStream.range(0,str.length())
+                                        .filter(j -> (i&(1<<j))!=0)
+                                        .mapToObj(j -> String.valueOf(str.charAt(j)))
+                                        .collect(Collectors.joining())
+                        ).collect(Collectors.toList());
+
+        System.out.println("Subsequences: " + subs);
+    }
+
+    // 51 Count Frequency of Characters in a String
+    static void charFrequency() {
+        String input="success";
+
+        Map<Character,Long> map =
+                input.chars().mapToObj(c -> (char)c)
+                        .collect(Collectors.groupingBy(c->c,Collectors.counting()));
+
+        System.out.println("Char frequency: " + map);
+    }
+
+    // 52 Flatten a Nested List
+    static void flattenList() {
+        List<List<Integer>> nested =
+                Arrays.asList(Arrays.asList(1,2,3),Arrays.asList(4,5),Arrays.asList(6,7));
+
+        List<Integer> flat =
+                nested.stream().flatMap(List::stream).collect(Collectors.toList());
+
+        System.out.println("Flatten list: " + flat);
+    }
+
+    // 53 Find Duplicate Elements in a List
+    static void duplicateElements() {
+        List<Integer> numbers = Arrays.asList(1,2,3,4,2,5,3,6);
+
+        Set<Integer> duplicates =
+                numbers.stream()
+                        .filter(n -> Collections.frequency(numbers,n)>1)
+                        .collect(Collectors.toSet());
+
+        System.out.println("Duplicates: " + duplicates);
+    }
+
+    // 54 Convert Map to List of Key-Value Pairs
+    static void mapToKeyValuePairs() {
+        Map<String,Integer> map = Map.of("A",1,"B",2,"C",3);
+
+        List<String> list =
+                map.entrySet().stream()
+                        .map(e -> e.getKey()+"="+e.getValue())
+                        .collect(Collectors.toList());
+
+        System.out.println("Key value pairs: " + list);
+    }
+
+    // 55 Check if a List is Sorted
+    static void checkSorted() {
+        List<Integer> numbers = Arrays.asList(1,2,3,4,5);
+
+        boolean sorted =
+                IntStream.range(0,numbers.size()-1)
+                        .allMatch(i -> numbers.get(i)<=numbers.get(i+1));
+
+        System.out.println("Is sorted: " + sorted);
+    }
+
+    // 56 Find All Subarrays of a List
+    static void subarrays() {
+        List<Integer> numbers = Arrays.asList(1,2,3);
+
+        List<List<Integer>> subarrays =
+                IntStream.range(0,numbers.size()).boxed()
+                        .flatMap(i ->
+                                IntStream.rangeClosed(i+1,numbers.size())
+                                        .mapToObj(j -> numbers.subList(i,j))
+                        ).collect(Collectors.toList());
+
+        System.out.println("Subarrays: " + subarrays);
+    }
+
+    // 57 Combine Two Lists into a Map
+    static void combineListsToMap() {
+        List<String> keys = Arrays.asList("A","B","C");
+        List<Integer> values = Arrays.asList(1,2,3);
+
+        Map<String,Integer> map =
+                IntStream.range(0,keys.size()).boxed()
+                        .collect(Collectors.toMap(keys::get,values::get));
+
+        System.out.println("Combined map: " + map);
+    }
+
+    // 58 Find Pair of Numbers with a Given Sum
+    static void pairWithGivenSum() {
+        List<Integer> numbers = Arrays.asList(1,2,3,4,5);
+        int target=6;
+
+        List<List<Integer>> pairs =
+                numbers.stream()
+                        .flatMap(a ->
+                                numbers.stream()
+                                        .filter(b -> a+b==target && a<b)
+                                        .map(b -> Arrays.asList(a,b))
+                        ).collect(Collectors.toList());
+
+        System.out.println("Pairs: " + pairs);
+    }
+
+    // 59 Generate Random Numbers Using Stream
+    static void randomNumbers() {
+        List<Integer> nums =
+                new Random().ints(5,1,100)
+                        .boxed()
+                        .collect(Collectors.toList());
+
+        System.out.println("Random numbers: " + nums);
+    }
+
+    // 60 Find Longest Increasing Subsequence
+    static void longestIncreasingSubsequence() {
+        List<Integer> numbers = Arrays.asList(10,9,2,5,3,7,101,18);
+
+        List<Integer> lis = new ArrayList<>();
+
+        numbers.forEach(num -> {
+            int pos = Collections.binarySearch(lis,num);
+            if(pos<0) pos = -(pos+1);
+            if(pos<lis.size()) lis.set(pos,num);
+            else lis.add(num);
+        });
+
+        System.out.println("LIS: " + lis);
+    }
+
+    // 61 Sort a List Based on Frequency of Elements
+    static void sortByFrequency() {
+        List<Integer> numbers = Arrays.asList(4,5,6,5,4,3);
+
+        List<Integer> sorted =
+                numbers.stream()
+                        .sorted(Comparator.comparingInt(n -> -Collections.frequency(numbers,n)))
+                        .distinct()
+                        .collect(Collectors.toList());
+
+        System.out.println("Sorted by frequency: " + sorted);
+    }
+
+    // 62 Convert List of Strings to Sentence Case
+    static void sentenceCase() {
+        List<String> words = Arrays.asList("java","stream","api");
+
+        List<String> result =
+                words.stream()
+                        .map(w -> w.substring(0,1).toUpperCase()+w.substring(1).toLowerCase())
+                        .collect(Collectors.toList());
+
+        System.out.println("Sentence case: " + result);
+    }
+    
 }
 
 class Student {
